feat: Add wishes and update styles

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Happy Birthday Tobias</title>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
+	<link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -17,18 +19,30 @@
         <div class="front">
           <div class="imgset">
             <img
-              width="100%"
+              width="100%" height="565px"
               src="birthday.png"
             />
           </div>
         </div>
+		<div style=" width: 90%; margin:0 auto;">
+
+			<p class="intro">To my dear friend who's miles away but close to my heart <br>
+				<i class="em em-heartpulse"></i>
+			  </p>
+		</div>
         <div class="text-container">
-          <p id="head">Happy Birthday!</p>
           <p>
-            I hope your special day will bring you lots of happiness, love, and
-            fun. You deserve them a lot. Enjoy!
+            I wanted to wish you a very happy birthday and let you know that even though we're not together, you're always on my mind.
+			If I had a star for every time I thought of you, I would be holding a whole galaxy.
           </p>
-          <p>Hope your day goes great!</p>
+          <p>You are such a kind and special person, and I admire your strength and resilience. I hope that on your special day, you feel all the love and happiness that you deserve. I think of you a lot, and I truly can't wait to meet you in person.</p>
+		  <p>
+			May this new year of your life bring you good health, joy, and all the wonderful things that you hope for. Happy birthday, Tobias.
+		  </p>
+		  <div class="footer">
+			  <p>With love and best wishes, <br>
+				  Debbie</p>
+		  </div>
         </div>
       </div>
     </section>
